# AssemblyTales

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
AsmExecute/: CMakeLists.txt  asmexecute.cpp
BenchmarkPatch/: CMakeLists.txt  compile_benchmark_results.py  main.cpp
Cordic/: CMakeLists.txt  benchmark.cpp  bit_test.cpp  functions.cpp  functions.h
DivTests/: CMakeLists.txt  libdiv.cpp  testdiv.cpp
FieldExtract/: AsmCopyGen.cpp  AsmCopyGen.h  AsmUtils.cpp  AsmUtils.h  CMakeLists.txt  README.md  selectfields.cpp
HotPatch/: CMakeLists.txt  hotpatch.cpp
